--- a/cloudbuild-tag.yaml
+++ b/cloudbuild-tag.yaml
@@ -37,8 +37,6 @@ steps:
   name: 'gcr.io/kaniko-project/executor:latest'
   args:
   - --destination=gcr.io/$PROJECT_ID/controller:$TAG_NAME
-  - --cache=true
-  - --cache-ttl=24h
   waitFor: ['go test', 'go vet', 'go fmt']
 - id: 'Generate manifests'
   name: 'gcr.io/$PROJECT_ID/kustomize:latest'
@@ -58,7 +56,7 @@ steps:
   - cp
   - fqdnnetworkpolicies.yaml
   - gs://fqdnnetworkpolicies-manifests/$TAG_NAME.yaml
-  waitFor: ['Generate manifests']
+  waitFor: ['Generate manifests', 'Build and push image']
 options:
   machineType: N1_HIGHCPU_8
   volumes:
