Introducing v1alpha2 API
To support Ingress policies, we need to modify a bit
the API, so we introduce a v1alpha2.
It adds the "ingress" section to the CRD, but also
a policyType like the one used in NetworkPolicies.
The behavior of that policyType makes this a non-backward
compatible change.

This commit only introduces the new API. There is no
actual implementation yet.

--- a/config/samples/networking_v1alpha2_fqdnnetworkpolicy_invalid_protocol.yaml
+++ b/config/samples/networking_v1alpha2_fqdnnetworkpolicy_invalid_protocol.yaml
@@ -12,10 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: networking.gke.io/v1alpha1
+apiVersion: networking.gke.io/v1alpha2
 kind: FQDNNetworkPolicy
 metadata:
-  name: fqdnnetworkpolicy-invalid-wildcard
+  name: fqdnnetworkpolicy-invalid-protocol
 spec:
   podSelector: {}
   egress:
@@ -23,7 +23,6 @@ spec:
       - fqdns:
         - github.com
         - gitlab.com
-        - '*.example.com'
       ports:
       - port: 443
-        protocol: TCP
+        protocol: ICMP
