--- a/config/samples/networking_v1alpha2_fqdnnetworkpolicy_invalid_fqdntoolong.yaml
+++ b/config/samples/networking_v1alpha2_fqdnnetworkpolicy_invalid_fqdntoolong.yaml
@@ -12,10 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: networking.gke.io/v1alpha1
+apiVersion: networking.gke.io/v1alpha2
 kind: FQDNNetworkPolicy
 metadata:
-  name: fqdnnetworkpolicy-valid-noprotocol
+  name: fqdnnetworkpolicy-invalid-fqdntoolong
 spec:
   podSelector: {}
   egress:
@@ -23,6 +23,7 @@ spec:
       - fqdns:
         - github.com
         - gitlab.com
+        - abcdefghijklmnopqrstuvwxyz.abcdefghijklmnopqrstuvwxyz.abcdefghijklmnopqrstuvwxyz.abcdefghijklmnopqrstuvwxyz.abcdefghijklmnopqrstuvwxyz.abcdefghijklmnopqrstuvwxyz.abcdefghijklmnopqrstuvwxyz.abcdefghijklmnopqrstuvwxyz.abcdefghijklmnopqrstuvwxyz.abcdefghijklmnopqrstuvwxyz.com
       ports:
       - port: 443
-        protocol: ""
+        protocol: TCP
