--- a/config/samples/networking_v1alpha2_fqdnnetworkpolicy_invalid_wildcard.yaml
+++ b/config/samples/networking_v1alpha2_fqdnnetworkpolicy_invalid_wildcard.yaml
@@ -12,10 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: networking.gke.io/v1alpha1
+apiVersion: networking.gke.io/v1alpha2
 kind: FQDNNetworkPolicy
 metadata:
-  name: fqdnnetworkpolicy-valid-noport
+  name: fqdnnetworkpolicy-invalid-wildcard
 spec:
   podSelector: {}
   egress:
@@ -23,5 +23,7 @@ spec:
       - fqdns:
         - github.com
         - gitlab.com
+        - '*.example.com'
       ports:
-      - protocol: TCP
+      - port: 443
+        protocol: TCP
