--- a/config/samples/networking_v1alpha2_fqdnnetworkpolicy_valid_nonexistentfqdn.yaml
+++ b/config/samples/networking_v1alpha2_fqdnnetworkpolicy_valid_nonexistentfqdn.yaml
@@ -12,17 +12,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: networking.gke.io/v1alpha1
+apiVersion: networking.gke.io/v1alpha2
 kind: FQDNNetworkPolicy
 metadata:
-  name: fqdnnetworkpolicy-invalid-protocol
+  name: fqdnnetworkpolicy-valid-brokenfqdn
 spec:
   podSelector: {}
   egress:
     - to:
       - fqdns:
-        - github.com
-        - gitlab.com
+        - foo.bar.notld
       ports:
       - port: 443
-        protocol: ICMP
+        protocol: TCP
