--- a/config/samples/networking_v1alpha2_fqdnnetworkpolicy_valid_noport.yaml
+++ b/config/samples/networking_v1alpha2_fqdnnetworkpolicy_valid_noport.yaml
@@ -12,10 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: networking.gke.io/v1alpha1
+apiVersion: networking.gke.io/v1alpha2
 kind: FQDNNetworkPolicy
 metadata:
-  name: fqdnnetworkpolicy-invalid-port
+  name: fqdnnetworkpolicy-valid-noport
 spec:
   podSelector: {}
   egress:
@@ -24,5 +24,4 @@ spec:
         - github.com
         - gitlab.com
       ports:
-      - port: 66443
-        protocol: TCP
+      - protocol: TCP
