Webhook for v1alpha2: adding checks and default values to API
Same check as for egress policies.

--- a/config/samples/networking_v1alpha2_fqdnnetworkpolicy_valid_ingress.yaml
+++ b/config/samples/networking_v1alpha2_fqdnnetworkpolicy_valid_ingress.yaml
@@ -15,12 +15,12 @@
 apiVersion: networking.gke.io/v1alpha2
 kind: FQDNNetworkPolicy
 metadata:
-  name: fqdnnetworkpolicy-valid
+  name: fqdnnetworkpolicy-valid-ingress
 spec:
   podSelector: {}
-  policyType: Egress
-  egress:
-    - to:
+  policyType: Ingress
+  ingress:
+    - from:
       - fqdns:
         - github.com
         - gitlab.com
