Add test and implementation for for ingress policies

--- a/config/samples/networking_v1alpha2_fqdnnetworkpolicy_valid_ingress.yaml
+++ b/config/samples/networking_v1alpha2_fqdnnetworkpolicy_valid_ingress.yaml
@@ -18,7 +18,8 @@ metadata:
   name: fqdnnetworkpolicy-valid-ingress
 spec:
   podSelector: {}
-  policyType: Ingress
+  policyTypes:
+    - Ingress
   ingress:
     - from:
       - fqdns:
