Fix test for Egress only policy

--- a/config/samples/networking_v1alpha2_fqdnnetworkpolicy_valid.yaml
+++ b/config/samples/networking_v1alpha2_fqdnnetworkpolicy_valid.yaml
@@ -18,7 +18,8 @@ metadata:
   name: fqdnnetworkpolicy-valid
 spec:
   podSelector: {}
-  policyType: Egress
+  policyTypes:
+  - Egress
   egress:
     - to:
       - fqdns:
