--- a/config/samples/networking_v1alpha3_fqdnnetworkpolicy_invalid_wildcard.yaml
+++ b/config/samples/networking_v1alpha3_fqdnnetworkpolicy_invalid_wildcard.yaml
@@ -1,4 +1,4 @@
-# Copyright 2021 Google LLC
+# Copyright 2022 Google LLC.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,19 +12,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: networking.gke.io/v1alpha2
+apiVersion: networking.gke.io/v1alpha3
 kind: FQDNNetworkPolicy
 metadata:
-  name: fqdnnetworkpolicy-valid-ingress
+  name: fqdnnetworkpolicy-invalid-wildcard
 spec:
   podSelector: {}
-  policyTypes:
-    - Ingress
-  ingress:
-    - from:
+  egress:
+    - to:
       - fqdns:
         - github.com
         - gitlab.com
+        - '*.example.com'
       ports:
       - port: 443
         protocol: TCP
