--- a/config/samples/networking_v1alpha3_fqdnnetworkpolicy_valid_noprotocol.yaml
+++ b/config/samples/networking_v1alpha3_fqdnnetworkpolicy_valid_noprotocol.yaml
@@ -1,4 +1,4 @@
-# Copyright 2021 Google LLC
+# Copyright 2022 Google LLC.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,14 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: networking.gke.io/v1alpha2
+apiVersion: networking.gke.io/v1alpha3
 kind: FQDNNetworkPolicy
 metadata:
-  name: fqdnnetworkpolicy-valid
+  name: fqdnnetworkpolicy-valid-noprotocol
 spec:
   podSelector: {}
-  policyTypes:
-  - Egress
   egress:
     - to:
       - fqdns:
@@ -27,4 +25,4 @@ spec:
         - gitlab.com
       ports:
       - port: 443
-        protocol: TCP
+        protocol: ""
