--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,4 @@
-# Copyright 2021 Google LLC
+# Copyright 2022 Google LLC.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -14,23 +14,23 @@
 
 steps:
 - id: 'Install kubebuilder'
-  name: 'golang:1.15'
+  name: 'golang:1.18'
   args: ['/bin/sh', './tests/install-kubebuilder.sh']
   waitFor: ['-']
 - id: 'go mod download'
-  name: 'golang:1.15'
+  name: 'golang:1.18'
   args: ['go', 'mod', 'download']
   waitFor: ['Install kubebuilder']
 - id: 'go test'
-  name: 'golang:1.15'
+  name: 'golang:1.18'
   args: ['go', 'test', './...', '-coverprofile', 'cover.out']
   waitFor: ['go mod download', 'Install kubebuilder']
 - id: 'go vet'
-  name: 'golang:1.15'
+  name: 'golang:1.18'
   args: ['go', 'vet', './...']
   waitFor: ['go mod download', 'Install kubebuilder']
 - id: 'go fmt'
-  name: 'golang:1.15'
+  name: 'golang:1.18'
   args: ['/bin/sh', '-c', '[ -z $(gofmt -l ./) ]']
   waitFor: ['go mod download', 'Install kubebuilder']
 options:
