--- a/config/crd/bases/networking.gke.io_fqdnnetworkpolicies.yaml
+++ b/config/crd/bases/networking.gke.io_fqdnnetworkpolicies.yaml
@@ -1,4 +1,4 @@
-# Copyright 2021 Google LLC
+# Copyright 2022 Google LLC.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -11,14 +11,12 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
-
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.9.0
   creationTimestamp: null
   name: fqdnnetworkpolicies.networking.gke.io
 spec:
@@ -29,190 +27,215 @@ spec:
     plural: fqdnnetworkpolicies
     singular: fqdnnetworkpolicy
   scope: Namespaced
-  validation:
-    openAPIV3Schema:
-      description: FQDNNetworkPolicy is the Schema for the fqdnnetworkpolicies API
-      properties:
-        apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-          type: string
-        kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-          type: string
-        metadata:
-          type: object
-        spec:
-          description: FQDNNetworkPolicySpec defines the desired state of FQDNNetworkPolicy
-          properties:
-            egress:
-              items:
-                description: FQDNNetworkPolicyEgressRule describes a particular set
-                  of traffic that is allowed out of pods matched by a FQDNNetworkPolicySpec's
-                  podSelector. The traffic must match both ports and to.
-                properties:
-                  ports:
-                    items:
-                      description: NetworkPolicyPort describes a port to allow traffic
-                        on
-                      properties:
-                        port:
-                          anyOf:
-                          - type: integer
-                          - type: string
-                          description: The port on the given protocol. This can either
-                            be a numerical or named port on a pod. If this field is
-                            not provided, this matches all port names and numbers.
-                          x-kubernetes-int-or-string: true
-                        protocol:
-                          description: The protocol (TCP, UDP, or SCTP) which traffic
-                            must match. If not specified, this field defaults to TCP.
-                          type: string
-                      type: object
-                    type: array
-                  to:
-                    items:
-                      description: FQDNNetworkPolicyPeer represents a FQDN that the
-                        FQDNNetworkPolicy allows connections to.
-                      properties:
-                        fqdns:
-                          items:
-                            type: string
-                          type: array
-                      required:
-                      - fqdns
-                      type: object
-                    type: array
-                required:
-                - to
-                type: object
-              type: array
-            ingress:
-              items:
-                description: FQDNNetworkPolicyIngressRule describes a particular set
-                  of traffic that is allowed into pods matched by a FQDNNetworkPolicySpec's
-                  podSelector. The traffic must match both ports and from.
-                properties:
-                  from:
-                    items:
-                      description: FQDNNetworkPolicyPeer represents a FQDN that the
-                        FQDNNetworkPolicy allows connections to.
-                      properties:
-                        fqdns:
-                          items:
-                            type: string
-                          type: array
-                      required:
-                      - fqdns
-                      type: object
-                    type: array
-                  ports:
-                    items:
-                      description: NetworkPolicyPort describes a port to allow traffic
-                        on
-                      properties:
-                        port:
-                          anyOf:
-                          - type: integer
-                          - type: string
-                          description: The port on the given protocol. This can either
-                            be a numerical or named port on a pod. If this field is
-                            not provided, this matches all port names and numbers.
-                          x-kubernetes-int-or-string: true
-                        protocol:
-                          description: The protocol (TCP, UDP, or SCTP) which traffic
-                            must match. If not specified, this field defaults to TCP.
-                          type: string
-                      type: object
-                    type: array
-                required:
-                - from
-                type: object
-              type: array
-            podSelector:
-              description: A label selector is a label query over a set of resources.
-                The result of matchLabels and matchExpressions are ANDed. An empty
-                label selector matches all objects. A null label selector matches
-                no objects.
-              properties:
-                matchExpressions:
-                  description: matchExpressions is a list of label selector requirements.
-                    The requirements are ANDed.
-                  items:
-                    description: A label selector requirement is a selector that contains
-                      values, a key, and an operator that relates the key and values.
-                    properties:
-                      key:
-                        description: key is the label key that the selector applies
-                          to.
-                        type: string
-                      operator:
-                        description: operator represents a key's relationship to a
-                          set of values. Valid operators are In, NotIn, Exists and
-                          DoesNotExist.
-                        type: string
-                      values:
-                        description: values is an array of string values. If the operator
-                          is In or NotIn, the values array must be non-empty. If the
-                          operator is Exists or DoesNotExist, the values array must
-                          be empty. This array is replaced during a strategic merge
-                          patch.
-                        items:
-                          type: string
-                        type: array
-                    required:
-                    - key
-                    - operator
-                    type: object
-                  type: array
-                matchLabels:
-                  additionalProperties:
-                    type: string
-                  description: matchLabels is a map of {key,value} pairs. A single
-                    {key,value} in the matchLabels map is equivalent to an element
-                    of matchExpressions, whose key field is "key", the operator is
-                    "In", and the values array contains only "value". The requirements
-                    are ANDed.
-                  type: object
-              type: object
-            policyTypes:
-              items:
-                description: Policy Type string describes the NetworkPolicy type This
-                  type is beta-level in 1.8
-                type: string
-              type: array
-          required:
-          - podSelector
-          type: object
-        status:
-          description: FQDNNetworkPolicyStatus defines the observed state of FQDNNetworkPolicy
-          properties:
-            lastSyncTime:
-              format: date-time
-              type: string
-            nextSyncTime:
-              format: date-time
-              type: string
-            reason:
-              type: string
-            state:
-              description: State represents the state of the FQDNNetworkPolicy
-              type: string
-          required:
-          - state
-          type: object
-      type: object
-  version: v1alpha2
   versions:
-  - name: v1alpha2
+  - name: v1alpha3
+    schema:
+      openAPIV3Schema:
+        description: FQDNNetworkPolicy is the Schema for the fqdnnetworkpolicies API
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: FQDNNetworkPolicySpec defines the desired state of FQDNNetworkPolicy
+            properties:
+              egress:
+                items:
+                  description: FQDNNetworkPolicyEgressRule describes a particular
+                    set of traffic that is allowed out of pods matched by a FQDNNetworkPolicySpec's
+                    podSelector. The traffic must match both ports and to.
+                  properties:
+                    ports:
+                      items:
+                        description: NetworkPolicyPort describes a port to allow traffic
+                          on
+                        properties:
+                          endPort:
+                            description: If set, indicates that the range of ports
+                              from port to endPort, inclusive, should be allowed by
+                              the policy. This field cannot be defined if the port
+                              field is not defined or if the port field is defined
+                              as a named (string) port. The endPort must be equal
+                              or greater than port. This feature is in Beta state
+                              and is enabled by default. It can be disabled using
+                              the Feature Gate "NetworkPolicyEndPort".
+                            format: int32
+                            type: integer
+                          port:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: The port on the given protocol. This can
+                              either be a numerical or named port on a pod. If this
+                              field is not provided, this matches all port names and
+                              numbers. If present, only traffic on the specified protocol
+                              AND port will be matched.
+                            x-kubernetes-int-or-string: true
+                          protocol:
+                            default: TCP
+                            description: The protocol (TCP, UDP, or SCTP) which traffic
+                              must match. If not specified, this field defaults to
+                              TCP.
+                            type: string
+                        type: object
+                      type: array
+                    to:
+                      items:
+                        description: FQDNNetworkPolicyPeer represents a FQDN that
+                          the FQDNNetworkPolicy allows connections to.
+                        properties:
+                          fqdns:
+                            items:
+                              type: string
+                            type: array
+                        required:
+                        - fqdns
+                        type: object
+                      type: array
+                  required:
+                  - to
+                  type: object
+                type: array
+              ingress:
+                items:
+                  description: FQDNNetworkPolicyIngressRule describes a particular
+                    set of traffic that is allowed into pods matched by a FQDNNetworkPolicySpec's
+                    podSelector. The traffic must match both ports and from.
+                  properties:
+                    from:
+                      items:
+                        description: FQDNNetworkPolicyPeer represents a FQDN that
+                          the FQDNNetworkPolicy allows connections to.
+                        properties:
+                          fqdns:
+                            items:
+                              type: string
+                            type: array
+                        required:
+                        - fqdns
+                        type: object
+                      type: array
+                    ports:
+                      items:
+                        description: NetworkPolicyPort describes a port to allow traffic
+                          on
+                        properties:
+                          endPort:
+                            description: If set, indicates that the range of ports
+                              from port to endPort, inclusive, should be allowed by
+                              the policy. This field cannot be defined if the port
+                              field is not defined or if the port field is defined
+                              as a named (string) port. The endPort must be equal
+                              or greater than port. This feature is in Beta state
+                              and is enabled by default. It can be disabled using
+                              the Feature Gate "NetworkPolicyEndPort".
+                            format: int32
+                            type: integer
+                          port:
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            description: The port on the given protocol. This can
+                              either be a numerical or named port on a pod. If this
+                              field is not provided, this matches all port names and
+                              numbers. If present, only traffic on the specified protocol
+                              AND port will be matched.
+                            x-kubernetes-int-or-string: true
+                          protocol:
+                            default: TCP
+                            description: The protocol (TCP, UDP, or SCTP) which traffic
+                              must match. If not specified, this field defaults to
+                              TCP.
+                            type: string
+                        type: object
+                      type: array
+                  required:
+                  - from
+                  type: object
+                type: array
+              podSelector:
+                description: A label selector is a label query over a set of resources.
+                  The result of matchLabels and matchExpressions are ANDed. An empty
+                  label selector matches all objects. A null label selector matches
+                  no objects.
+                properties:
+                  matchExpressions:
+                    description: matchExpressions is a list of label selector requirements.
+                      The requirements are ANDed.
+                    items:
+                      description: A label selector requirement is a selector that
+                        contains values, a key, and an operator that relates the key
+                        and values.
+                      properties:
+                        key:
+                          description: key is the label key that the selector applies
+                            to.
+                          type: string
+                        operator:
+                          description: operator represents a key's relationship to
+                            a set of values. Valid operators are In, NotIn, Exists
+                            and DoesNotExist.
+                          type: string
+                        values:
+                          description: values is an array of string values. If the
+                            operator is In or NotIn, the values array must be non-empty.
+                            If the operator is Exists or DoesNotExist, the values
+                            array must be empty. This array is replaced during a strategic
+                            merge patch.
+                          items:
+                            type: string
+                          type: array
+                      required:
+                      - key
+                      - operator
+                      type: object
+                    type: array
+                  matchLabels:
+                    additionalProperties:
+                      type: string
+                    description: matchLabels is a map of {key,value} pairs. A single
+                      {key,value} in the matchLabels map is equivalent to an element
+                      of matchExpressions, whose key field is "key", the operator
+                      is "In", and the values array contains only "value". The requirements
+                      are ANDed.
+                    type: object
+                type: object
+              policyTypes:
+                items:
+                  description: PolicyType string describes the NetworkPolicy type
+                    This type is beta-level in 1.8
+                  type: string
+                type: array
+            required:
+            - podSelector
+            type: object
+          status:
+            description: FQDNNetworkPolicyStatus defines the observed state of FQDNNetworkPolicy
+            properties:
+              lastSyncTime:
+                format: date-time
+                type: string
+              nextSyncTime:
+                format: date-time
+                type: string
+              reason:
+                type: string
+              state:
+                type: string
+            required:
+            - state
+            type: object
+        type: object
     served: true
     storage: true
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
+    subresources:
+      status: {}
