--- a/config/crd/patches/webhook_in_fqdnnetworkpolicies.yaml
+++ b/config/crd/patches/webhook_in_fqdnnetworkpolicies.yaml
@@ -1,4 +1,4 @@
-# Copyright 2021 Google LLC
+# Copyright 2022 Google LLC.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -14,6 +14,7 @@
 
 # The following patch enables conversion webhook for CRD
 # CRD conversion requires k8s 1.13 or later.
+---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
