--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -14,9 +14,17 @@
 
 resources:
 - manager.yaml
+
+generatorOptions:
+  disableNameSuffixHash: true
+
+configMapGenerator:
+- files:
+  - controller_manager_config.yaml
+  name: manager-config
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-configMapGenerator:
-- envs:
-  - manager.env
-  name: manager-config
+images:
+- name: controller
+  newName: controller
+  newTag: latest
