--- a/config/webhook/service.yaml
+++ b/config/webhook/service.yaml
@@ -20,6 +20,7 @@ metadata:
 spec:
   ports:
     - port: 443
+      protocol: TCP
       targetPort: 9443
   selector:
     control-plane: controller-manager
