--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -29,6 +29,10 @@ steps:
   name: 'golang:1.20'
   args: ['go', 'vet', './...']
   waitFor: ['go mod download', 'Install kubebuilder']
+- id: 'go fmt debug'
+  name: 'golang:1.20'
+  args: ['gofmt', '-l', './']
+  waitFor: ['go mod download', 'Install kubebuilder']
 - id: 'go fmt'
   name: 'golang:1.20'
   args: ['/bin/sh', '-c', '[ -z $(gofmt -l ./) ]']
